styles.css
.wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100vh;
    margin: 0;
    font-family: "Arial", sans-serif;
}

.headings {
    text-align: center;
}

.headings h2, p {
    margin-bottom: 2px;
}

.grid-size-display {
    color: #2c3e50;
    font-size: 0.85rem;
  }

.btn-container {
    display: flex;
    gap: 10px;
}

.btn-container button {
    margin: 15px;
    border: 1px solid #2c3e50;
    border-radius: 20px;
    padding: 10px;
    margin-bottom: 2px;
    margin-top: 10px;
    cursor: pointer;
    font-weight: bold;
}

.grid-size-btn {
    color: white;
    background-color: #2c3e50;
}

.clear-btn {
    color: #2c3e50;
    background-color: white;
}

.btn-container button:hover {
    transform: translateY(-1px);
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
  }
  
.btn-container button:active {
    background-color: lightgray;
    transition: 0.15s;
}

.grid-container {
    border: 2px solid black;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    max-width: 96%;
    max-height: 96%;
    aspect-ratio: 1;
    margin: 20px auto;
    box-sizing: border-box;
    margin-bottom: 50px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    background-color: white;
    cursor: pointer;
}

.row {
    display: flex;
    justify-content: stretch;
    align-items: stretch;
    flex: 1;
    width: 100%;
}

.cell {
    border-right: 0.5px solid black;
    border-bottom: 0.5px solid black;
    box-sizing: border-box;
    flex: 1 1 0%;
    flex-wrap: wrap;
    align-items: center;
    aspect-ratio: 1;
    transition: 0.2s;
}

